@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1115 2024/03/27 10:00:38 pin Exp $
+# $NetBSD: Makefile,v 1.1116 2024/04/26 15:18:09 wiz Exp $
 #
 
 COMMENT=	System utilities
@@ -51,7 +51,6 @@ SUBDIR+=	backuppc
 SUBDIR+=	bacula
 SUBDIR+=	bacula-clientonly
 SUBDIR+=	bacula-doc
-SUBDIR+=	bacula-qt-console
 SUBDIR+=	bacula-qt5-console
 SUBDIR+=	bacula-tray-monitor
 SUBDIR+=	bacula-tray-monitor-qt5
