@@ -1,1 +1,0 @@
-Qt-based console for Bacula - The Network Backup Solution
