@@ -1,30 +1,0 @@
-# $NetBSD: Makefile,v 1.48 2023/11/12 13:23:28 wiz Exp $
-
-PKGNAME=	${DISTNAME:S/-/-qt-console-/}
-PKGREVISION=	3
-COMMENT=	Qt-based console for Bacula - The Network Backup Solution
-
-DISTINFO_FILE=		${.CURDIR}/../../sysutils/bacula/distinfo
-PATCHDIR=		${.CURDIR}/../../sysutils/bacula/patches
-
-USE_TOOLS+=		gmake pkg-config
-CONFIGURE_ARGS+=	--enable-client-only
-CONFIGURE_ARGS+=	--enable-bat
-
-# Uses typeof, cannot use standard c++03
-FORCE_CXX_STD=		gnu++03
-
-BUILD_DIRS=		src/qt-console
-
-INSTALLATION_DIRS=	bin share/examples/bacula
-
-CONF_FILES+=		${EXAMPLESDIR}/bat.conf ${PKG_SYSCONFDIR}/bat.conf
-
-post-install:
-	${INSTALL_DATA} ${WRKSRC}/src/qt-console/bat.conf ${DESTDIR}${EXAMPLESDIR}
-
-.include "../../sysutils/bacula/Makefile.common"
-.include "../../sysutils/bacula/buildlink3.mk"
-.include "../../x11/qt4-libs/buildlink3.mk"
-.include "../../x11/qt4-tools/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
