@@ -1,15 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2012/10/06 17:54:53 christos Exp $
-sbin/bat
-share/doc/bacula/clients.html
-share/doc/bacula/console.html
-share/doc/bacula/filesets.html
-share/doc/bacula/index.html
-share/doc/bacula/joblist.html
-share/doc/bacula/jobplot.html
-share/doc/bacula/jobs.html
-share/doc/bacula/mail-message-new.png
-share/doc/bacula/media.html
-share/doc/bacula/restore.html
-share/doc/bacula/status.png
-share/doc/bacula/storage.html
-share/examples/bacula/bat.conf
